--- a/Source/mystyles.css
+++ b/Source/mystyles.css
@@ -8,6 +8,7 @@ div.emoji-window {
         z-index: 2147483647;
         overflow: scroll;
         resize: both;
+        cursor: move;
     }
 
 .tip {
@@ -28,6 +29,7 @@ div.emoji-window {
     cursor: pointer;
     width:22px;
     height:22px;
+    opacity: 0.5;
 }
 
 .copied {
